@@ -1,3 +1,4 @@
+24-jun-2009 - adelikat - win32 - Drag & Drop for .fcm, it converts and then loads the converted movie automatically
 24-jun-2009 - adelikat - win32 - Drag & Drop support for palette files
 23-jun-2009 - adelikat - win32 - Drag & Drop support for savestates
 22-jun-2009 - qeed - Revert IRQ inhibit fix, since this seems to break Dragon
